Fix broken layout

--- a/Homework 3/assets/style.css
+++ b/Homework 3/assets/style.css
@@ -1,69 +1,101 @@
-body, html {
-    height: 100%;
+html, body {
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
+    height: auto;
+    background: #fb74cd;
 }
+
 section {
+    position: absolute;
+    height: 50%;
+}
+
+.container {
     padding: 25px;
 }
+
+.pink {
+    top: 0;
+}
+
+.pinky-pink {
+    bottom: 0;
+}
+
 .pink {
     background: #f658c0;
     width: 100%;
     height: 40%;
     border-bottom: 1px dotted lightgreen;
 }
+
 .pinky-pink {
     background-color: #fb74cd;
     width: 100%;
     height: 60%;
 }
+
 footer {
     width: 80%;
-    position: relative;
 }
+
 #github-img a {
     color: #000;
 }
+
 #github-img a:hover, #github-img a:focus {
     font-size: 26px;
 }
+
 #github-img {
     font-size: 25px;
     position: relative;
     top: 82px;
     left: 71px;
 }
+
 #footer-img {
     position: absolute;
     bottom: 0;
     left: 10%;
 }
+
 #hello-kitty {
     height: 150px;
     width: 150px;
     background: url(hello-kitty.png);
 }
+
 .form-top {
     background: #fb93d7;
     padding: 40px;
     border-radius: 10px;
 }
+
 .label-red {
     font-weight: bold;
     color: darkred;
 }
+
 .radio label {
     font-size: 12px;
     padding: 4px;
     padding-left: 5px;
 }
+
 .bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
     width: 100%;
 }
+
 .space {
     height: 30px;
 }
+
 .radio-group {
     padding-left: 15px;
 }
+
 .custom-tooltip {
     cursor: pointer;
 }
